--- a/src/App.css
+++ b/src/App.css
@@ -41,16 +41,11 @@
  border:#23a696 ;
 }
 
-.form { 
-  background-color:  #f0f7f6;
-  width: 300px;
-  height: 300px;
-  display: flex;
-  align-items: flex-end;
-  justify-content:center;
-  padding: 20px;
+.cards{
+display: inline-block;
+align-items:center;
+justify-content: space-around;
 }
-
 
 @keyframes App-logo-spin {
   from {
