--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,24 @@
 display: inline-block;
 align-items:center;
 justify-content: space-around;
+font-family: 'Courier New', Courier, monospace;
+}
+
+.detalleItems{
+  display: flex;
+  flex-direction: row;
+  justify-content:space-evenly;
+  font-family: 'Courier New', Courier, monospace;
+
+}
+
+.descripcionItems{
+  background-color: rgb(218, 215, 215);
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-around;
+  align-items: center;
 }
 
 @keyframes App-logo-spin {
